--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@react-spring/parallax": "^9.5.0",
     "gatsby": "^4.18.2",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-scroll-parallax": "^3.2.0"
   }
 }
